# py-abieos

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.py  pyproject.toml
.github/workflows/: release_build.yml
libraries/: CMakeLists.txt
src/: _abieos.cpp
src/py_abieos/: __init__.py
tests/: conftest.py  ship_abi.json  test_abieos.py  test_lowlevel.py
tools/: Dockerfile
