[tool.poetry]
name = "py-abieos"
version = "0.1.0"
description = "Bindings for C++ abieos"
authors = ["Guillermo Rodriguez <guillermo@telos.net>"]
packages = [{include = 'py_abieos', from = 'src'}]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"

[tool.poetry.group.dev.dependencies]
pdbpp = "^0.10.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
