[tool.poetry]
name = "py-abieos"
version = "0.1.3"
description = "Bindings for C++ abieos"
authors = ["Guillermo Rodriguez <guillermo@telos.net>"]
packages = [{include = 'py_abieos', from = 'src'}]
include = [
    { path = 'src/py_abieos/_abieos.so', format = ['sdist', 'wheel']}
]
build = 'build.py'

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"

[tool.poetry.group.dev.dependencies]
pdbpp = "^0.10.3"
wheel = "^0.44.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

